--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="postgresql://usuario:senha@localhost:5432/nome_do_banco"
+DATABASE_URL="mysql://root:20032003@localhost:3306/agendacaotica"
+
 JWT_SECRET="sua-chave-secreta"
-PORT=3000
+PORT=3001
