--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "agenda-medica-caotica-backend": "file:",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "firebase-admin": "^12.6.0",
     "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2"
   },
@@ -18,8 +21,10 @@
     "seed": "ts-node src/prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^2.0.20",
     "prisma": "^5.20.0",
