--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
     "google-auth-library": "^9.14.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2"
   },
   "scripts": {
@@ -29,7 +30,7 @@
     "nodemon": "^2.0.20",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
